syntax = "proto3";

// 命 令 号: 111
// 命令名称: file_rename
// 命令描述: 文件重命名
// 文件名称: s111_file_rename.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbFileRename";

message FileRenameRequest {
  // ATTR: REQUSET
  string old_name = 1; //原目录或文件名
  string new_name = 2; //新目录或文件名
}

message FileRenameResponse {

}
